# wecs

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
demo/: CMakeLists.txt
demo/src/: main.cpp
test/: CMakeLists.txt
test/core/: CMakeLists.txt  type_list.cpp  utility.cpp
test/entity/: CMakeLists.txt  commands.cpp  entity.cpp  event_dispatcher.cpp  querier.cpp  registry.cpp  resource.cpp  sparse_set.cpp  storage.cpp
test/signal/: delegate.cpp  sigh.cpp  sink.cpp
wecs/: wecs.hpp
wecs/config/: config.hpp
wecs/container/: compress_pair.hpp  dense_map.hpp
wecs/core/: ident.hpp  singlton.hpp  type_list.hpp  utility.hpp
wecs/entity/: commands.hpp  entity.hpp  event_dispatcher.hpp  fwd.hpp  querier.hpp  registry.hpp  registry_wrapper.hpp  resource.hpp  sigh_mixin.hpp  sparse_set.hpp  storage.hpp  system_constructor.hpp  world.hpp
wecs/signal/: delegate.hpp  dispatcher.hpp  sigh.hpp  sink.hpp
